feat: implemented delete, edit and visualize die
